Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-2559

QComboBox: setSizeAdjustPolicy(QComboBox::AdjustToContents) is ignored in layout. Buggy behavior.

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P3: Somewhat important P3: Somewhat important
    • 4.8.0
    • 4.4.0
    • Widgets: Layout
    • None
    • e9ac791e2afce05be68da5f7b0c00eac00811f29

      Trying to set several comboBoxes and adjusting their size using setSizeAdjustPolicy(QComboBox::AdjustToContents) and setSizePolicy(QSizePolicy::MinimumExpanding, QSizePolicy::MinimumExpanding) makes the combo boxes snap into their right positions when resized and updated.

      To make things work, setSizeAdjustPolicy(QComboBox::AdjustToContentsOnFirstShow) must be used.

      This worked in Qt3

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            vfm Thierry Bastian (closed Nokia identity) (Inactive)
            engvolds Morten Engvoldsen (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes