Fixed the combobox just adjusting their size without relayouting

When adjustSize() is called, we nned to call updateGeometry to notify
the layout in which the combobox is to redo the layout.

Task-number: QTBUG-2559